# controllers/users.js
@@ -3,7 +3,7 @@ const mongodb = require('../data/database');
 const ObjectId = require('mongodb').ObjectId;
 
 const getAll = async (req, res) => {
-    //#swagger.tags = ['Users'];
+    //#swagger.tags = ['Contacts'];
     const result = await mongodb.getDatabase().db().collection('contacts').find();
     result.toArray().then((users) => {
         res.setHeader('Content-Type', 'application/json');
@@ -12,7 +12,7 @@ const getAll = async (req, res) => {
 };
 
 const getSingle = async (req, res) => {
-    //#swagger.tags = ['Users'];
+    //#swagger.tags = ['Contacts'];
     const userId = new ObjectId(req.params.id);
     const result = await mongodb.getDatabase().db().collection('contacts').find({ _id: userId });
     result.toArray().then((users) => {
@@ -22,7 +22,7 @@ const getSingle = async (req, res) => {
 };
 
 const createUser = async (req, res) => {
-    //#swagger.tags = ['Users'];
+    //#swagger.tags = ['Contacts'];
     const user = {
         firstName: req.body.firstName,
         lastName: req.body.lastName,
@@ -39,7 +39,7 @@ const createUser = async (req, res) => {
 };
 
 const updateUser = async (req, res) => {
-    //#swagger.tags = ['Users'];
+    //#swagger.tags = ['Contacts'];
     const userId = new ObjectId(req.params.id);
     const user = {
         firstName: req.body.firstName,
@@ -57,7 +57,7 @@ const updateUser = async (req, res) => {
 };
 
 const deleteUser = async (req, res) => {
-    //#swagger.tags = ['Users'];
+    //#swagger.tags = ['Contacts'];
     const userId = new ObjectId(req.params.id);
     const response = await mongodb.getDatabase().db().collection('contacts').deleteOne({ _id: userId });
     if (response.deletedCount > 0) {
